Revert "Merge branch 'sprint-v1' into cc_update2(from-sprint-v1)"
This reverts commit 24848de35a81f8d7571aa15a6a06030f09a1bd42, reversing
changes made to fa617048e6ed2de9205f399d32094a8262872669.
